# vae

./: .gitignore  activation.sh  batch-size.sh  benchmark.py  hidden.sh  latent-dim.sh  lr.sh  main.py  metrics.py  model.py  n-latent-samples.sh  plot.py  pyproject.toml  seed.sh  trainer.py  trainer_config.py  weight_decay.sh
plotting/: __init__.py  constants.py  core.py  data.py  diagnostics.py  generation.py  gradient_analysis.py  kl_analysis.py  latent_space.py  parameter_diagnostics.py  training_curves.py
