[project]
name = "mnist-vae"
version = "0.1.0"
description = "Modern PyTorch VAE implementation"
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "tensorboard>=2.14.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "numpy",
    "torch>=2.0.1",
    "torchvision==0.15.2",
    "Pillow>=9.0",
    "ruff>=0.14.3",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "isort>=5.13.2",
]
